update messages and set new instance

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 weather-app1/my-project12 - Shortcut.lnk
 weather-app1/src/weather-data.json
 the-weather-forecasting
+src/vending2 - Shortcut.lnk
+src/vending_machine2.py
+docs/docs - Shortcut.lnk
+src/docs - Shortcut.lnk
